--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
         // Not supporting notification runtime permission yet.
         //noinspection OldTargetApi
         targetSdkVersion 32
-        versionCode 31
-        versionName '1.5.2'
+        versionCode 1
+        versionName 'initial v1.0.0'
         resValue 'string', 'app_version', versionName + ' (' + versionCode + ')'
         buildConfigField 'String', 'FILE_PROVIDIER_AUTHORITY', 'APPLICATION_ID + ".file_provider"'
         resValue 'string', 'app_provider_authority', applicationId + '.app_provider'
