--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
         //noinspection OldTargetApi
         targetSdkVersion 32
         versionCode 1
-        versionName 'initial v1.0.0'
+        versionName 'initial version 1.0.0'
         resValue 'string', 'app_version', versionName + ' (' + versionCode + ')'
         buildConfigField 'String', 'FILE_PROVIDIER_AUTHORITY', 'APPLICATION_ID + ".file_provider"'
         resValue 'string', 'app_provider_authority', applicationId + '.app_provider'
